--- a/mcmc/progressive_logreg_scratch.ipynb
+++ b/mcmc/progressive_logreg_scratch.ipynb
@@ -41,7 +41,6 @@
     "warnings.simplefilter(\"ignore\", FutureWarning)\n",
     "\n",
     "jnp.set_printoptions(precision=3, suppress=True, threshold=sys.maxsize)\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
     "print(jax.devices(\"cuda\"))\n",
     "\n",
     "dataset = scipy.io.loadmat(\"mcmc_data/benchmarks.mat\")\n",
@@ -127,10 +126,10 @@
      "evalue": "too many values to unpack (expected 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m lmc_dict_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmcmc_data/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_lmc_dict.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m nuts_dict_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmcmc_data/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_nuts_dict.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m model_logreg, data_split \u001b[38;5;241m=\u001b[39m get_model_and_data(dataset, data_name)\n\u001b[1;32m      6\u001b[0m x_train, labels_train, x_test, labels_test \u001b[38;5;241m=\u001b[39m data_split\n\u001b[1;32m      8\u001b[0m num_particles \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m15\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[3], line 5\u001B[0m\n\u001B[1;32m      3\u001B[0m lmc_dict_filename \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmcmc_data/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_name\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m_lmc_dict.pkl\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m      4\u001B[0m nuts_dict_filename \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmcmc_data/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_name\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m_nuts_dict.pkl\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m----> 5\u001B[0m model_logreg, data_split \u001B[38;5;241m=\u001B[39m get_model_and_data(dataset, data_name)\n\u001B[1;32m      6\u001B[0m x_train, labels_train, x_test, labels_test \u001B[38;5;241m=\u001B[39m data_split\n\u001B[1;32m      8\u001B[0m num_particles \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m2\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m15\u001B[39m\n",
+      "\u001B[0;31mValueError\u001B[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
