added isolet data

--- a/mcmc/preprocess_dataset.ipynb
+++ b/mcmc/preprocess_dataset.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "c382345d2d5233a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:52:06.145060Z",
-     "start_time": "2024-10-10T15:52:05.638168Z"
+     "end_time": "2025-06-02T20:31:50.672052Z",
+     "start_time": "2025-06-02T20:31:50.667107Z"
     }
    },
-   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -83,19 +81,19 @@
     "    print(f\"x shape: {x.shape}, y.shape: {y.shape}\")\n",
     "\n",
     "    return x, y"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "6173bb561f504e51",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:52:20.863350Z",
-     "start_time": "2024-10-10T15:52:08.235722Z"
+     "end_time": "2025-06-02T20:31:58.906606Z",
+     "start_time": "2025-06-02T20:31:51.732412Z"
     }
    },
-   "outputs": [],
    "source": [
     "from ucimlrepo import fetch_ucirepo\n",
     "\n",
@@ -103,18 +101,27 @@
     "# fetch dataset\n",
     "dataset = fetch_ucirepo(id=572)\n",
     "# dataset = fetch_ucirepo(id=54)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "af7dd196ff3901c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:53:01.956483Z",
-     "start_time": "2024-10-10T15:53:01.757947Z"
+     "end_time": "2025-06-02T20:32:05.247022Z",
+     "start_time": "2025-06-02T20:32:05.037627Z"
     }
    },
+   "source": [
+    "# data (as pandas dataframes)\n",
+    "x = np.array(dataset.data.features)\n",
+    "y = np.array(dataset.data.targets)\n",
+    "\n",
+    "np.set_printoptions(threshold=sys.maxsize)\n",
+    "print(jnp.squeeze(y))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -308,35 +315,17 @@
      ]
     }
    ],
-   "source": [
-    "# data (as pandas dataframes)\n",
-    "x = np.array(dataset.data.features)\n",
-    "y = np.array(dataset.data.targets)\n",
-    "\n",
-    "np.set_printoptions(threshold=sys.maxsize)\n",
-    "print(jnp.squeeze(y))"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "f9f76ac7bdd2d81d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:57:59.220767Z",
-     "start_time": "2024-10-10T15:57:59.213441Z"
+     "end_time": "2025-06-02T20:32:06.193061Z",
+     "start_time": "2025-06-02T20:32:06.188938Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ones len: 220, zeros len: 6599\n",
-      "Using all ones\n"
-     ]
-    }
-   ],
    "source": [
     "# vowels = [1, 5, 9, 15, 21]\n",
     "# non_vowels = list(set(range(1, 27)) - set(vowels))\n",
@@ -354,18 +343,31 @@
     "\n",
     "\n",
     "x1, y1 = balance_and_shuffle(x, y, 1000)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ones len: 220, zeros len: 6599\n",
+      "Using all ones\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "127cbeb8c4249e88",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:58:01.654461Z",
-     "start_time": "2024-10-10T15:58:01.648817Z"
+     "end_time": "2025-06-02T20:32:07.122058Z",
+     "start_time": "2025-06-02T20:32:07.119274Z"
     }
    },
+   "source": [
+    "x2, y2 = filter_and_normalise(x1, y1, threshold=1e-4)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -375,25 +377,23 @@
      ]
     }
    ],
-   "source": [
-    "x2, y2 = filter_and_normalise(x1, y1, threshold=1e-4)"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "2c9d4c60654f9506",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T15:58:05.283632Z",
-     "start_time": "2024-10-10T15:58:05.279194Z"
+     "end_time": "2025-06-02T20:32:49.072114Z",
+     "start_time": "2025-06-02T20:32:49.069510Z"
     }
    },
-   "outputs": [],
    "source": [
-    "np.save(\"mcmc_data/tbp_x.npy\", x2)\n",
-    "np.save(\"mcmc_data/tbp_y.npy\", y2)"
-   ]
+    "np.save(\"mcmc_data/isolet_ab_x.npy\", x2)\n",
+    "np.save(\"mcmc_data/isolet_ab_y.npy\", y2)"
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
